# evolvagent

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.toml  config.toml.example  docker-compose.yml  pyproject.toml
evolvagent/: __init__.py
evolvagent/cli/: main.py
evolvagent/core/: __init__.py  agent.py  config.py  events.py  learner.py  llm.py  log.py  network.py  peer.py  protocol.py  reflection.py  scheduler.py  skill.py  storage.py
evolvagent/messaging/: __init__.py  base.py  formatter.py  report.py  telegram.py
evolvagent/skills/: file_search.py  general.py  git_ops.py  shell.py  summarize.py  workspace_context.py
tests/: test_all.py  test_ask.py  test_file_search.py  test_git_ops.py  test_hardening.py  test_learner.py  test_messaging.py  test_network.py  test_reflection.py  test_scheduler.py  test_storage.py  test_trust.py  test_workspace_context.py
